@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class TrafficManager{
    -name
}

class Company{}

class Ship {
    -mmmsiCode /'MMSI - 1'/
    -imoCode /'IMO - 9'/
    -callSignId /'CallSign - 10'/
    -shipName /'VesselName - 8'/
    -draft /'Draft - 14'/
}

class VesselType{
    VesselTypeDesignation /'VesselType - 11'/
    Length /'Length - 12'/
    Width /'Width - 13'/
    maxCapacity /'Cargo - 15'/
}

Company "1" -- "1..*" Ship : owns >
TrafficManager "1" -- "1..*" Ship : analyses >
Ship "1" -- "1" VesselType : is of >

@enduml